<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_SwitchStatus" Id="{6e0f7c0e-6a92-0c57-26a9-be3a66aee476}">
    <Declaration><![CDATA[TYPE ST_SwitchStatus :
STRUCT
 	MagnetValue		        AT%Q* 	: INT;
	MagnetEnabled     	        	: BOOL;
    CurrentOutputActual             : LREAL;
    CurrentTheoreticalEstimation    : LREAL;
    CurrentOutputMax                : LREAL;
    PosnCurrentCoeff                : LREAL;
	ShuttleCountAtDivertTrig		: UDINT;
	ShuttleQueueCount				: UDINT;
	ShuttleCountOnShortcut			: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>