<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Mc3" Id="{128fe823-5e0a-4d4b-9c8c-d35aeb611c41}">
    <Declaration><![CDATA[VAR_GLOBAL
	//Track_BigCircle		: 	MC_PlanarTrack; 	
	//Track_MainCircle	: 	MC_PlanarTrack;
 	//Track_SmallCircle	: 	MC_PlanarTrack;
	
{warning <'bundle FB_Track'>}
	fbSectorInterface		: 	ARRAY[1..nNumMaxMovers] OF FB_MoverSectorInterface;
	MC_Tracks    		    :	ARRAY[1..3] OF Tc3_Mc3PlanarMotion.MC_PlanarTrack;
	MC_Trackfeedback	  	:	ARRAY[1..3] OF Tc3_Mc3PlanarMotion.MC_PlanarFeedback;
	TrackTrail 			    :	Tc3_Mc3PlanarMotion.MC_PlanarTrackTrail;
	
{warning <'bundle FB_PlanarMover'>}
	fbPlanarXtsMover		:	ARRAY[1..nNumMaxMovers] OF FB_PlanarXtsMover;
	MoverFeedback		    :	ARRAY[1..nNumMaxMovers] OF Tc3_Mc3PlanarMotion.MC_PlanarFeedback;
	aiXpuXtsMover       	:	ARRAY[1..nNumMaxMovers] OF Tc3_XTS_Utility.I_TcIoXtsXpuMover;
	
//	Mover				        :	ARRAY[0..nNumMaxMovers] OF MoverSort;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>